# Miguel-File-Manager

./: README.md  package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: ItemsView.tsx  NavBar.tsx
src/components/mini/: Item.tsx
